*******************************************************************************
* RECENT CHANGES
*******************************************************************************

=== 1.0.20 ===
* Updated build scripts and dependencies.

=== 1.0.19 ===
* Updated build scripts and dependencies.

=== 1.0.18 ===
* Updated build scripts and dependencies.

=== 1.0.17 ===
* Updated build scripts and dependencies.

=== 1.0.16 ===
* Implemented Stereo Split mode for stereo versions of plugins.
* Updated build scripts and dependencies.

=== 1.0.15 ===
* Updated build scripts and dependencies.

=== 1.0.14 ===
* Updated build scripts and dependencies.

=== 1.0.13 ===
* Updated build scripts and dependencies.

=== 1.0.12 ===
* Updated build scripts and dependencies.

=== 1.0.11 ===
* Fixed invalid version number in metadata.

=== 1.0.10 ===
* Updated build scripts and dependencies.

=== 1.0.9 ===
* Updated build scripts and dependencies.

=== 1.0.8 ===
* Added 'Min' and 'Max' sidechain sources for the gate.
* Updated build scripts and dependencies.

=== 1.0.7 ===
* Updated build scripts and dependencies.
* Assigned more correct names for sidechain types.
* Now gate allows to work in reverse-operation mode.

=== 1.0.6 ===
* Added german translations (contributed by Johannes Guenther).
* Updated build scripts and dependencies.

=== 1.0.5 ===
* Updated build scripts and dependencies.

=== 1.0.4 ===
* Updated plugin metadata (contributed by Dennis Braun).
* Updated dependencies and build scripts.

=== 1.0.3 ===
* Initial release.
