@@ -56,7 +56,7 @@
 						<ui:with ox="1" oy="0">
 							<marker id="gzs" color="kscale"/>
 							<marker id="hzs" color="kscale" visibility=":gh"/>
-							<marker id="gt" color="attack"/>
+							<marker id="gt" editable="true" width="2" pointer="vsize" color="attack" hcolor="attack"/>
 							<marker id="hts" color="attack" visibility=":gh"/>
 						</ui:with>
 
@@ -167,7 +167,7 @@
 					<!-- Markers -->
 					<marker id="gzs" color="kscale"/>
 					<marker id="hzs" color="kscale" visibility=":gh"/>
-					<marker id="gt" color="attack"/>
+					<marker id="gt" editable="true" width="2" pointer="hsize" color="attack" hcolor="attack"/>
 					<marker id="hts" color="attack" visibility=":gh"/>
 
 					<!-- Text -->
