@@ -3,6 +3,7 @@
 *******************************************************************************
 
 === 1.0.20 ===
+* Threshold markers are now editable.
 * Updated build scripts and dependencies.
 
 === 1.0.19 ===
